Update endpoint to return the highest role instead of list